feat: adiciona app Windows e administração de mesas
